Responsive bug on mobile fixed

--- a/app.css
+++ b/app.css
@@ -1,14 +1,12 @@
 html{
-    background: linear-gradient( rgba(0,0,0,0.3), rgba(0, 0, 0, 0.3) ), url(https://images.unsplash.com/photo-1524523382422-2d0c2665021f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1334&q=80) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+height: 100%;
+
 }
 
 body{
     
-   
+    background: url(https://images.unsplash.com/photo-1520932146956-1ee4b33740fc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1324&q=80) no-repeat fixed top center;;
+    background-size: 100% 100%;
     font-family: 'Cuprum', sans-serif;
     color: white;
 
